--- a/_includes/analytics-providers/custom.html
+++ b/_includes/analytics-providers/custom.html
@@ -1,3 +1,3 @@
 <!-- start custom analytics snippet -->
-
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=8QybIRUrMc08pEF2g9tP_oYpo92q1ZtkxfrY78imgzw&cl=ffffff&w=a"></script>
 <!-- end custom analytics snippet -->
