--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,3 +23,4 @@
   {% endif %}
   </div>
 {% endif %}
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=8QybIRUrMc08pEF2g9tP_oYpo92q1ZtkxfrY78imgzw&cl=ffffff&w=a"></script>
