--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,7 +21,7 @@
       {% include nav_list nav=page.sidebar.nav %}
     {% endif %}
   {% endif %}
-  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=8QybIRUrMc08pEF2g9tP_oYpo92q1ZtkxfrY78imgzw&cl=ffffff&w=a"></script>
+  <a href="http://www.clustrmaps.com/map/Has97.github.io" title="Visit tracker for Has97.github.io"><img src="//www.clustrmaps.com/map_v2.png?d=8QybIRUrMc08pEF2g9tP_oYpo92q1ZtkxfrY78imgzw" /></a>
   </div>
   
 {% endif %}
