--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,8 +20,15 @@
     {% if page.sidebar.nav %}
       {% include nav_list nav=page.sidebar.nav %}
     {% endif %}
+    <div id="map-container" style="margin-top: 1rem;">
+      <script 
+        type="text/javascript" 
+        id="clustrmaps" 
+        src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=8QybIRUrMc08pEF2g9tP_oYpo92q1ZtkxfrY78imgzw">
+      </script>
+    </div>
   {% endif %}
-  <a href="http://www.clustrmaps.com/map/Has97.github.io" title="Visit tracker for Has97.github.io"><img src="//www.clustrmaps.com/map_v2.png?d=8QybIRUrMc08pEF2g9tP_oYpo92q1ZtkxfrY78imgzw" /></a>
+ 
   </div>
   
 {% endif %}
