--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,7 @@
     <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}"><i class="fa fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
     {% endif %}
   </ul>
+  <a href="https://clustrmaps.com/site/1c61e"  title="ClustrMaps"><img src="//www.clustrmaps.com/map_v2.png?d=8QybIRUrMc08pEF2g9tP_oYpo92q1ZtkxfrY78imgzw&cl=ffffff" /></a>
 </div>
 {% endif %}
 
